# tlang

./: .gitignore  Cargo.toml  Readme.md  index.js  main.py  main.td  struct_define.td
.cargo/: config.toml
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/builtin/: Cargo.toml
crates/builtin/src/: lib.rs
crates/bytecode/: Cargo.toml
crates/bytecode/src/: generator.rs  lib.rs  scope.rs
crates/lex/: Cargo.toml
crates/lex/src/: lib.rs  main.rs
crates/parser/: Cargo.toml  td.bnf
crates/parser/src/: error.rs  lib.rs  main.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs
crates/value/: Cargo.toml
crates/value/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: builtin.rs  bytecode.rs  lib.rs  main.rs  mem.rs  module.rs  package.rs  value.rs  vm.rs
crates/vm/src/builtin/: mod.rs
crates/vm/src/compiler/: mod.rs  wasm.rs
crates/vm/src/ir/: mod.rs
crates/vm/src/semantic/: functions.rs  mod.rs  scope.rs  structs.rs  symbol.rs  ty.rs  type_ast.rs
other/vscode-extension/: CHANGELOG.md  language-configuration.json  package-lock.json  package.json  tlang-0.0.1.vsix  tsconfig.json  vsc-extension-quickstart.md  webpack.config.js
other/vscode-extension/syntaxes/: tlang.tmLanguage.json
