[package]
name = "vm"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vm"

[dependencies]
lex = { path = "../lex" }
token = { path = "../token" }
ast = { path = "../ast" }
parser = { path = "../parser" }
#bytecode = { path = "../bytecode" }
#builtin = { path = "../builtin" }

slotmap = "1.1.1"
indexmap = "2.14.0"
anyhow = "1.0.102"

[features]
print_passes = []
